# rawsort

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: executor.rs  exif.rs  lib.rs  main.rs  registry.rs
tests/: integration_test.rs
