[features]

[package]
name = "rawsort"
version = "0.2.1-alpha.0"
authors = ["Dotan Nahum <jondotan@gmail.com>"]
publish = false


[dependencies]
walkdir = "2.1.4"
chrono = "0.4"
clap = "2"
itertools = "0.7.3"
dialoguer = "0.1.0"
kamadak-exif = "*"
notify = "4.0.0"
slog = "2.3.3"
slog-term = "2.4.0"
slog-json = "2.2.0"



