[features]

[package]
name = "rawsort"
version = "0.4.1-alpha.0"
authors = ["Dotan Nahum <jondotan@gmail.com>"]
edition = "2021"
publish = false


[dependencies]
walkdir = "2.1.4"
chrono = "0.4"
clap = "2"
itertools = "0.7.3"
dialoguer = "0.1.0"
kamadak-exif = "0.3.1"
notify = "4.0.0"
slog = { version = "2.7.0" }
slog-term = "2.4.0"
slog-json = "2.2.0"
